--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "device-fingerprint-sdk",
-  "version": "1.0.1",
+  "version": "1.0.8",
   "description": "A lightweight JavaScript SDK for generating device fingerprints using various browser features like Canvas, WebGL, and Audio APIs.",
-  "main": "index.js",
+  "main": "FingerprintSDK.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
