--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
   "name": "device-fingerprint-sdk",
-  "version": "1.0.1",
-  "description": "A lightweight JavaScript SDK for generating device fingerprints using various browser features like Canvas, WebGL, and Audio APIs.",
-  "main": "FingerprintSDK.js",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "mulaa",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.6.0",
     "typescript": "^5.6.2"
-  },
-  "dependencies": {
-    "undici-types": "^6.19.8"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mulaateam/device-fingerprintSDK.git"
-  },
-  "bugs": {
-    "url": "https://github.com/mulaateam/device-fingerprintSDK/issues"
-  },
-  "homepage": "https://github.com/mulaateam/device-fingerprintSDK#readme"
+  }
 }
