add a new package manager

--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "device-fingerprint-sdk",
   "version": "1.0.0",
-  "description": "",
+  "description": "A lightweight JavaScript SDK for generating device fingerprints using various browser features like Canvas, WebGL, and Audio APIs.",
   "main": "index.js",
+  "dependencies": {
+    "typescript": "^5.6.2",
+    "undici-types": "^6.19.8"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^22.6.0",
-    "typescript": "^5.6.2"
-  }
+  "license": "ISC"
 }
