--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mulaateam-fingerprint-sdk",
-  "version": "1.0.2",
+  "name": "device-fingerprint-sdk",
+  "version": "1.0.0",
   "description": "A lightweight JavaScript SDK for generating device fingerprints using various browser features like Canvas, WebGL, and Audio APIs.",
   "main": "index.js",
   "dependencies": {
